2008-10-26  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/tools.lisp (remove-hook): New function.

	* src/clfswm-keys.lisp (with-capslock, without-capslock) 
	(with-numlock, without-cnumlock): New functions.

2008-10-25  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-info.lisp: Use the *binding-hook* to create info
	keys and mouse bindings.

	* src/bindings-second-mode.lisp: Use the *binding-hook* to create
	second keys and mouse bindings.

	* src/bindings.lisp: Use the *binding-hook* to create main keys
	and mouse bindings.

2008-10-10  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-menu.lisp (open-menu): Remember parent menu to undo
	menu opening.

2008-10-09  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/menu-def.lisp: Use a menu instead of a function for the
	standard menu.

2008-10-08  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-util.lisp (show-standard-menu): Display the standard
	menu from the 'update-menus' command.

2008-10-07  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-query.lisp (query-string): Do not ungrab keyboard if
	it's already grabbed.

	* src/clfswm-internal.lisp (display-frame-info): Use configurable
	colors and fix a bug with background.
	(display-frame-info): Set window background when displaying info.

2008-10-06  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/xlib-util.lisp (my-character->keysyms): Use a macro to avoid
	warning with clisp/new-clx.

2008-10-04  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-util.lisp (jump-to-slot): Prevent to jump on a
	deleted child.

2008-09-23  Philippe Brochard  <pbrochard@common-lisp.net>
	* *: **** Release 0809 ****

2008-09-23  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-util.lisp (ensure-unique-name): New function and menu
	entry.
	(ensure-unique-number): New function and menu entry.

2008-09-22  Philippe Brochard  <pbrochard@common-lisp.net>
