@@ -46,6 +46,12 @@
 This variable may be useful to speed up some slow version of CLX.
 It is particulary useful with CLISP/MIT-CLX.")
 
+(defparameter *modifier-alias* '((:alt :mod-1)     (:alt-l :mod-1)
+				 (:numlock :mod-2)
+				 (:super_l :mod-4)
+				 (:alt-r :mod-5)   (:alt-gr :mod-5)
+				 (:capslock :lock))
+  "Syntax: (modifier-alias effective-modifier)")
 
 
 (defparameter *display* nil)
